force-app/main/default/objects/Rippling_Time_Entry__c/Rippling_Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Rippling Time Entry</label>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rippling Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>