force-app/main/default/objects/Rippling_Time_Entry__c/fields/Clock_In__c.field-meta.xml
<CustomField>
    <fullName>Clock_In__c</fullName>
    <description>Shift start timestamp from Rippling.</description>
    <label>Clock In</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>