force-app/main/default/objects/Rippling_Time_Entry__c/fields/Clock_Out__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out__c</fullName>
    <description>Shift end timestamp from Rippling. Null while still clocked in.</description>
    <label>Clock Out</label>
    <type>DateTime</type>
</CustomField>