force-app/main/default/objects/Rippling_Time_Entry__c/fields/Department_At_Entry__c.field-meta.xml
<CustomField>
    <fullName>Department_At_Entry__c</fullName>
    <description>Rippling department recorded at the time of this punch.</description>
    <label>Department At Entry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>