force-app/main/default/objects/Rippling_Time_Entry__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Parent Employee record for this time entry.</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>