force-app/main/default/objects/Rippling_Time_Entry__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Elapsed shift hours. If still clocked in, computed against NOW().</description>
    <formula>IF(ISBLANK(Clock_Out__c), (NOW() - Clock_In__c) * 24, (Clock_Out__c - Clock_In__c) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>