force-app/main/default/objects/Rippling_Time_Entry__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <description>Rippling job code for this entry.</description>
    <label>Job Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>