force-app/main/default/objects/Rippling_Time_Entry__c/fields/Rippling_Time_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Time_Entry_Id__c</fullName>
    <description>Unique time entry identifier from Rippling.</description>
    <externalId>true</externalId>
    <label>Rippling Time Entry Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>