force-app/main/default/objects/Rippling_Time_Entry__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>